--- a/style.css
+++ b/style.css
@@ -64,16 +64,22 @@ body {
 }
 
 .photo-example {
+  display: grid;
   max-width: 700px;
   margin: 20px auto;
 }
 
 .photo-example img {
+  grid-column: 1;
+  grid-row: 1;
   max-width: 100%;
   display: block;
 }
 
 .overlay-text {
+  align-self: end;
+  grid-column: 1;
+  grid-row: 1;
   color: #fff;
   background-color: rgba(0, 0, 0, 0.308);
   padding: 20px;
